light html and css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,29 @@
 * {
-    background-color: cadetblue;
+    font-family: 'Silkscreen', cursive;
 }
 
 /* .hide {
     display: none;
 } */
+
+#main-header-text {
+    text-align: center;
+    color: black;
+    font-size: 40px;
+    text-decoration: underline;
+    background-color: coral;
+}
+
+.field {
+    border: 3px solid;
+    border-color: black;
+}
+
+.header-content {
+    display: block;
+}
+
+h3 {
+    text-decoration: underline;
+    font-size: 24px;
+}
