--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,8 @@
 * {
     margin: 0;
     padding: 0;
-    background-color: ;
+    /* background-color: ; */
 }
-
 
 /* header{
     background-color: black;
