--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,7 @@
     text-decoration: underline;
     font-weight: bold;
     background-color: orange;
+    font-size: x-large;
 }
 
 .list-buttons {
@@ -79,10 +80,6 @@
     background-color: aliceblue;
 }
 
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-
 .list{
     box-shadow:5px 2px 2px orange;
     margin-bottom: 3%;
@@ -94,14 +91,7 @@
 img{
     border-radius: 5px;   
 }
-<<<<<<< HEAD
-=======
-.hide {
-    display: none;
-}
-=======
 
 .hide {
     display: none;
 }
-
