--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,7 @@
 * {
     margin: 0;
     padding: 0;
-    /* background-color: cadetblue; */
+    /* background-color:darkcyan; */
     font-family: 'Silkscreen', cursive;
 }
 
@@ -96,3 +96,9 @@ img{
     display: none;
 }
 
+.image-container {
+    text-align: center;
+    padding: 30px;
+    background-color: darkcyan;
+
+}
