--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,6 +45,8 @@
 #seen {
     color: black;
     text-decoration: underline;
+    font-weight: bold;
+    background-color: orange;
 }
 
 .list-buttons {
@@ -60,6 +62,7 @@
     align-items: center;
     flex-wrap: wrap;
     gap: 20px;
+    background-color: orange;
 }
 .flex-column{
     display: flex;
@@ -74,4 +77,21 @@
 }
 #datepicker{
     background-color: aliceblue;
+}
+
+
+.list{
+    box-shadow:5px 2px 2px orange;
+    margin-bottom: 3%;
+}
+.navbar-link{
+    text-align: top;
+}
+
+img{
+    border-radius: 5px;   
+}
+
+.hide {
+    display: none;
 }
